meecast (1.1.4) unstable; urgency=low

  * Added new translation string for gismeteo.ru and yr.no 

 -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200

meecast (1.1.3) unstable; urgency=low

  * Added new translation string for gismeteo.ru

 -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200

meecast (1.1.2) unstable; urgency=low

  * Added icon for openstreetmap.org

 -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200

meecast (1.1.1) unstable; urgency=low

  * Fixed problem with sunrise in fmi source again
  * fixed problem with incorrect time in hourly forecast in fmi source
  * Fixed crashing related zero size of config file
  * Updated Germany, Danish translations

 -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200


meecast (1.0.4) unstable; urgency=low

  * Fixed problem with wind speed in gismeteo.ru  source

 -- Vlad Vasiliev <vlad@gas.by> Sun, 12 Apr 2015 10:31:23 +0200


meecast (1.0.3) unstable; urgency=low

  * Fixed problem with sunrise in fmi source 
  * Fixed problem with incorrect text on standby widget
  * Updated Catalan, Chinese, Czech, Dutch, Finnish, Germany,
    Slovenian, Spanish, Swedish, Turkish, Italian

 -- Vlad Vasiliev <vlad@gas.by> Sun, 05 Mar 2015 11:31:23 +0200

meecast (1.0.3) unstable; urgency=low

  * Fixed problem with sunrise in fmi source 
  * Fixed problem with incorrect text on standby widget
  * Updated Catalan, Chinese, Czech, Dutch, Finnish, Germany,
    Slovenian, Spanish, Swedish, Turkish, Italian

 -- Vlad Vasiliev <vlad@gas.by> Sun, 05 Mar 2015 11:31:23 +0200

meecast (1.0) unstable; urgency=low

  * Added Hungarian translator László Kara to About page
  * Added Åke Engelbrektson as Swedish translator
  * Fixed problem with weather.com source (all days show night weather forecast)
  * Rewrote About page

 -- Vlad Vasiliev <vlad@gas.by> Tue, 17 Feb 2015 17:31:23 +0200

meecast (0.9.18) unstable; urgency=low

  *  Nothing  
