@@ -1,6 +1,7 @@
 meecast (1.1.4) unstable; urgency=low
 
   * Added new translation string for gismeteo.ru and yr.no 
+  * Fixed time format problem for settings in Harmattan (12/24h) 
 
  -- Vlad Vasiliev <vlad@gas.by> Wed, 03 Jun 2015 22:31:23 +0200
 
